cloudformation/ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Module EC2 - Tao Security Groups va EC2 Instances (Bastion Host Pattern)'

Parameters:
  # Cần phải tạo sẵn một Key Pair trên AWS Console trước khi chạy code này
  KeyName:
    Description: Ten cua EC2 KeyPair da tao tren AWS Console de SSH vao instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Phai la mot KeyPair hop le dang co tren AWS.
  
  # Tham số để giới hạn IP truy cập 
  YourIpAddress:
    Description: Nhap dia chi IP Public kem theo /32 de cho phep SSH (VD - 115.76.xxx.xxx/32)
    Type: String
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})

  InstanceType:
    Description: Loai EC2 Instance
    Type: String
    Default: t2.micro

  # Tự động lấy AMI Amazon Linux 2023 mới nhất
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

Resources:
  # SECURITY GROUPS
  # Public SG: Chỉ cho phép SSH từ IP được chỉ định
  PublicEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access from a specific IP to Public EC2
      VpcId: !ImportValue LabVpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref YourIpAddress
      Tags:
        - Key: Name
          Value: Lab-Public-SG

  # Private SG: Chỉ cho phép SSH từ Public SG
  PrivateEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access only from the Public EC2 Security Group
      VpcId: !ImportValue LabVpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          # Điền ID của Public SG
          SourceSecurityGroupId: !Ref PublicEC2SecurityGroup
      Tags:
        - Key: Name
          Value: Lab-Private-SG

  # EC2 INSTANCES
  # Public Instance (Bastion Host)
  PublicInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          AssociatePublicIpAddress: true
          SubnetId: !ImportValue LabPublicSubnetId
          GroupSet:
            - !Ref PublicEC2SecurityGroup
      Tags:
        - Key: Name
          Value: Lab-Public-Instance-Bastion

  # Private Instance
  PrivateInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      SubnetId: !ImportValue LabPrivateSubnetId
      SecurityGroupIds:
        - !Ref PrivateEC2SecurityGroup
      Tags:
        - Key: Name
          Value: Lab-Private-Instance

Outputs:
  PublicInstanceIP:
    Description: Dia chi Public IP cua Public Instance de ket noi SSH
    Value: !GetAtt PublicInstance.PublicIp
  PrivateInstanceIP:
    Description: Dia chi Private IP cua Private Instance
    Value: !GetAtt PrivateInstance.PrivateIp
